# flask_movie-rating

./: .gitignore  README.md  main.py  pyproject.toml
instance/: movies_collection.db
static/css/: styles.css
templates/: add.html  edit.html  index.html  select.html
