[tool.poetry]
name = "d64-movies"
version = "0.1.0"
description = ""
authors = ["oohlearn <learnooh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
wtforms = "^3.1.2"
flask-wtf = "^1.2.1"
flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"
werkzeug = "^3.0.1"
bootstrap-flask = "^2.3.3"
flash = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
